[package]
name = "resphys"
version = "0.1.0"
authors = ["Rybek"]
readme = "README.md"
description = "Simple 2D AABB only game collision detection/resolution engine."
repository = "https://github.com/ValorZard/Resphys-Fixed"
keywords = [ "physics", "2d", "simple", "collision", "aabb"]
license = "Apache-2.0"
edition = "2018"

[dependencies.fixed]
version = "1.9"
features = ["serde", "std", "serde-str", "num-traits"]

[dependencies]
generational-arena = "0.2.8"
fxhash = "0.2.1"
petgraph = "0.5.1"
log = "0.4.11"
# fixed point specific imports
fixed-sqrt = "0.2.4"
fixed-macro = "1.1.1"
cordic = "0.1.5"
num-traits = "0.2.14"

[dev-dependencies]
macroquad = "0.3.7"
simple_logger = { version = "1.11.0"}